--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         body {
             -webkit-font-smoothing: antialiased;
             font-family: Helvetica Neue, Helvetica, Hiragino Sans GB, Microsoft YaHei, Arial, sans-serif;
-            background-image: url('https://raw.githubusercontent.com/wyywang/wyywang.github.io/ForSU/susu.jpg');
+            background-image: url('https://raw.githubusercontent.com/wyywang/ForSU/master/susu.png');
             font-size: 85%;
             margin: 0;
         }
