--- a/susu.html
+++ b/susu.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no,width=device-width">
-    <title>你是🐷吗</title>
+    <title>呐 🌹</title>
     <link rel="shortcut icon" href="127.0.0.1">
 
     <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.slim.min.js"></script>
@@ -182,7 +182,7 @@
             this.context.shadowColor = this.COLOR;
             this.context.shadowBlur = this.BLUR;
 
-            this.context.fillText('🐷', 0, 0);
+            this.context.fillText('🌹', 0, 0);
             this.context.stroke();
             this.context.restore();
         },
